fix: set default text-align on form controls

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,8 @@
   box-sizing: border-box;
   box-shadow: inset 0 0 0 var(--border-width) var(--color-border, #8886);
   border-radius: var(--radius, 0.25em);
-  
+  text-align: left;
+
   &:focus-within { --color-border: var(--color-accent, #333); }
 
   .placeholder { opacity: 0.5; }
@@ -71,7 +72,8 @@
 
   display: flex;
   align-items: center;
-  
+  text-align: center;
+
   &.disabled { @extend %disabled; }
 
   .selected,
